Updated README.md, added .gitignore

--- a/bnf_railroad.ipynb
+++ b/bnf_railroad.ipynb
@@ -7,10 +7,11 @@
    "source": [
     "# BNF Railroad\n",
     "\n",
+    "Turn BNF grammar into railroad diagrams. Runs locally in Jupyter.\n",
+    "\n",
     "2024-01-22\n",
     "Raygan Henley\n",
     "\n",
-    "Turns a BNF grammar into railroad diagrams. Runs locally in Jupyter.\n",
     "\n",
     "Mimics functionality of `rr` by Gunther Rademacher.\n",
     "https://github.com/GuntherRademacher/rr\n",
